# fastapi-blog

./: .env  .gitignore  Dockerfile  README.rst  docker-compose.yaml  pyproject.toml  requirements.txt  yoyo.ini
app/: config.py  main.py
app/api/: routes.py
app/api/authentication/: endpoints.py  services.py
app/api/dependencies/: auth.py  database.py  posts.py
app/api/posts/: endpoints.py  services.py
app/db/: connection.py  errors.py  events.py
app/db/migrations/: create_table.py
app/db/repositories/: post.py  user.py
app/db/schemas/: post.py  token.py  user.py
app/logging/: logger.py  logging_config.py
scripts/: apply.py
